...
            "state" : "translated",
            "value" : "添加"
          }
        }
      }
    },
    "Add Customer" : {
      "comment" : "The title of a screen that allows a reseller to add a new customer.",
      "isCommentAutoGenerated" : true
    },
    "Add DNS server IP" : {
      "localizations" : {
        "fa" : {
...
      }
    },
    "Confirm & Deduct from Balance" : {
      "comment" : "A button that triggers the creation of a self-provisioned VPN.",
      "isCommentAutoGenerated" : true
    },
    "Confirm & Pay from Balance" : {
      "comment" : "A button that triggers the purchase of a subscription.",
      "isCommentAutoGenerated" : true
    },
    "Connect" : {
      "localizations" : {
        "fa" : {
...
            "state" : "translated",
            "value" : "連接"
          }
        }
      }
    },
    "Connection Details" : {

    },
    "Connection Rule" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "複製"
          }
        }
      }
    },
    "Copy Subscription URL" : {
      "comment" : "A button that copies the subscription URL to the clipboard.",
      "isCommentAutoGenerated" : true
    },
    "Copy VLESS Link" : {
      "comment" : "A button that copies a link to a",
      "isCommentAutoGenerated" : true
...
            "state" : "translated",
            "value" : "創建"
          }
        }
      }
    },
    "Create Customer Account" : {
      "comment" : "A button that creates a customer account.",
      "isCommentAutoGenerated" : true
    },
    "Create Manually" : {
      "localizations" : {
        "fa" : {
...
      "isCommentAutoGenerated" : true
    },
    "Customer Details" : {
      "comment" : "The title of a screen that displays details about a customer.",
      "isCommentAutoGenerated" : true
    },
    "Customer Email" : {
      "comment" : "The email address of the customer.",
      "isCommentAutoGenerated" : true
    },
    "Customer Information" : {
      "comment" : "A section header for the customer's information.",
      "isCommentAutoGenerated" : true
...
            "state" : "translated",
            "value" : "深色主題"
          }
        }
      }
    },
    "Dashboard" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "داشبورد"
          }
...
            "state" : "translated",
            "value" : "不保存"
          }
        }
      }
    },
    "Done" : {
      "localizations" : {
        "fa" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "انجام شد"
          }
...
            "state" : "translated",
            "value" : "可選"
          }
        }
      }
    },
    "Orders (%lld)" : {
      "comment" : "A label for a tab in the reseller's orders and transactions tab view. The number in parentheses is replaced with the number of orders in the reseller's account.",
      "isCommentAutoGenerated" : true
    },
    "OS" : {
      "localizations" : {
        "fa" : {
...
